2009-03-04  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Fixed a small issue when fetching parts where
	the encoding could be nil and subsequently, the
	path couldn't be set.

2009-03-03  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Fixed various small issues with the SOGo
	cache subsystem.

2009-03-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalDayTable.m ([UIxCalDayTable -dayClasses]):
	fixed the way the number of the current day is deduced,
	independently from the timezone (d. saving time or not).

2009-03-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoComponentOccurence.m
	([SOGoComponentOccurence -setComponent:newComponent]): retain the
	component's parent instead of the component itself, which is
	already retain by its parent anyway. See 2009-02-06 from me below.
	([SOGoComponentOccurence -setMasterComponent:newMaster]): no
	longer retain the "master" occurence since its parent is already
	retained.

2009-03-02  Ludovic Marcotte <lmarcotte@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m
	([SOGoObject -davRecordForUser:parameters:]):
	Don't initialize the SOGoUser variable of
	nocn AND noemail are passed.
	* Dropped Protocols/* from the repository.
	* Added missing Dutch wox templates

2009-02-23  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Updated German translation. Patch from
	Alexander Greiner-Baer <sogo-algb@freenet.de>
	* Added Italian translation. Patch from
	Marco Lertora <marco.lertora@infoporto.it>
	* Combined the various caches and moved the logic
	towards the SOGoCache class. Deprecated the
	SOGoLDAPUserManagerCleanupInterval defaults.
	Now only SOGoCacheCleanupInterval should be used.

2009-02-19  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-defaultSortKey]): replaced "displayName" by "c_cn", following
	changes made on 2009-02-06.

	* UI/Common/WODirectAction+SOGo.m ([WODirectAction