@@ -4,7 +4,8 @@ BUILD_DATE = $(shell echo $$USER@$$HOSTNAME; date +"%Y%m%d%H%M")
 ADDITIONAL_CPPFLAGS += \
         -DSOGO_MAJOR_VERSION=$(MAJOR_VERSION) \
         -DSOGO_MINOR_VERSION=$(MINOR_VERSION) \
-        -DSOGO_SUBMINOR_VERSION=$(SUBMINOR_VERSION)
+        -DSOGO_SUBMINOR_VERSION=$(SUBMINOR_VERSION) \
+	-DSOGO_LIBDIR="\"$(SOGO_LIBDIR)\""
 
 ADDITIONAL_INCLUDE_DIRS += \
 	-I../SoObjects/	\
